last changes from home

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -25,7 +25,102 @@
   		</ul>
   	</nav>
 
+<!--Book a Table-->
+
+  <div class="sectionBookaTab">
+    <img class= "imgBookTab" src="###">
+    <button class="button">Book a Table</button>
+    <p class="paragraph1">Opening hours:
+    Monday to Friday: 6.30 to 2pm
+    Saturday-Sunday: 8am to 2Pm</p>
+  </div>
+
   
+
+<!--Specials-->
+
+  <div>
+    <img class="imgSpecials" src="###">
+    <p>Specials</p>
+  </div>
+
+
+<!--Text/About-->
+
+  <div>
+    <p class="paragraph2">
+      Come and find out for yourself what makes Americanos an essential start to a Wellington day, the American food with a kiwi twist
+    </p>
+  </div>
+
+
+<!--MENU_BANNER & SECTION-->
+
+  <div class="imgBannerMenu">
+    <img src="##">
+  </div>
+
+  <div class="imgMenu">
+    <img src="###">
+    <img src="###">
+    <img src="###">
+  </div>
+
+
+<!--CONTACT_BANNER & FORM -->
+
+  <div class="imgBannerMenu">
+    <img src="##">
+  </div>
+
+  
+  <form class="contact__form">
+
+        <label for="name" class="member__label">Name</label>
+        <input type="text" id="name" class="member__text member__text--name"/>
+        <br/> <br/>
+
+        <label for="email" class="member__label">Email</label>
+        <input type="text" id="email" class="member__text member__text--email"/>
+        <br/> <br/>
+
+        <label for="phone" class="member__label member__label--phone">Subject</label>
+        <input type="text" id="phone" class="member__text member__text--phone">
+
+        <label for="message" class="member__label member__label--message">Message</label>
+        <textarea id="message" rows="7" cols="50" class="member__textarea member__text--message"> </textarea><br/> <br/>
+
+        <br/> <br/> <br/>
+        <input type="submit" value="Submit" class="member__submit">
+
+      </form>
+  </form>
+
+
+<!--TEXT_ ADDRESS, PHONE, EMAIL-->
+
+  <div>
+    <p>
+      Opening hours:
+      Monday to Friday: 6.30 to 2pm
+      Saturday-Sunday: 8am to 2Pm
+      Phone: 
+      04 499 5242
+      Email: 
+      info@americanos.co.nz
+      Address: 
+      Dunbar Sloan Downstairs, 32 Waring Taylor Street, Lambton, Wellington CBD. 
+    </p>
+  </div>
+
+<!--FOOTER_SOCIAL MEDIA LOGOS-->
+
+  <footer>
+    <i class="fab fa-facebook-f"></i>
+    <i class="fab fa-tripadvisor"></i>
+    <i class="fab fa-instagram"></i>
+  </footer>
+
 
   
   </body>
