changes from Uni, not working well

--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
   <body>
 
 <!--Logo-->
-  	<div class="logo">
-		<img class="imgLogo" src="images/logo.jpg">
-	</div>
+  <div class="logo">
+		<img class="imgLogo" src="#">
+  </div>
 
 <!--NavBar-->
 
   	<nav>
   		<ul>
 	  		<li><a href="#"> Home </a></li>
-	  		<li><a href="#"> About </a></li>
 	  		<li><a href="#"> Menu </a></li>
 	  		<li><a href="#"> Contact </a></li>
   		</ul>
@@ -27,9 +26,11 @@
 
 <!--Book a Table-->
 
-  <div class="sectionBookaTab">
-    <img class= "imgBookTab" src="###">
-    <button class="button">Book a Table</button>
+  <div class="sectionBookTab">
+    <img class="imgphoto " src="images/photo1crop.jpg" width="600" height="300">
+    <div class="buttonPosition">
+      <button class="button">Book a Table</button>
+    </div>
     <p class="paragraph1">Opening hours:
     Monday to Friday: 6.30 to 2pm
     Saturday-Sunday: 8am to 2Pm</p>
@@ -39,7 +40,7 @@
 
 <!--Specials-->
 
-  <div>
+  <div class="sectionSpecials">
     <img class="imgSpecials" src="###">
     <p>Specials</p>
   </div>
@@ -56,8 +57,8 @@
 
 <!--MENU_BANNER & SECTION-->
 
-  <div class="imgBannerMenu">
-    <img src="##">
+  <div class="banner">
+    <p class="banner__menu">Menu</p>
   </div>
 
   <div class="imgMenu">
@@ -100,7 +101,7 @@
 <!--TEXT_ ADDRESS, PHONE, EMAIL-->
 
   <div>
-    <p>
+    <p class="paragraph3">
       Opening hours:
       Monday to Friday: 6.30 to 2pm
       Saturday-Sunday: 8am to 2Pm
