new images and banner working

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="containerBorder">
 
       <div class="section">
-        <img class="imgphoto" src="images/photo1crop.jpg">
+        <img class="imgphoto" src="images/table.jpg">
         <button class="btn">Book a Table</button>
 <!--         <div class="imgBox">
           <p class="para--table">Opening hours:<br>Monday to Friday: 6.30 to 2pm<br>Saturday-Sunday: 8am to 2Pm</p>
@@ -57,16 +57,17 @@
 
 
   <!--MENU_BANNER & MENU-->
+ 
 
-
-  <div class="section"> <!-- AQUI PONER EL BANNER MENU-->
-    <img src="##">
+  <div class="section"> 
+    <img src="images/banner2.jpg">
+    <p class="para para__menu">Menu</p>
   </div>
 
   <div class="section">
     <div>
       <img src="images/breakfastcrop.jpg">
-      <p class="para para__menu">Breakfast</p>
+      <p class="para para__menu para__menu--banner">Breakfast</p>
     </div>
     <div>
       <img src="images/lunchcrop.jpg">
@@ -82,8 +83,9 @@
 
 <!--CONTACT_BANNER & FORM -->
 
-  <div class="imgBannerMenu">
-    <img src="##">
+  <div class="section">
+    <img src="images/banner2.jpg">
+    <p class="para para__menu">Contact</p>
   </div>
 
   <div>
