--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <!--Text/About-->
 
   <div>
-    <p class="para">
-      Come and find out for yourself what makes Americanos an essential start to a Wellington day, the American food with a kiwi twist
+    <p class="para para__about">
+      Come and find out for yourself what makes Americanos an essential start to a Wellington day,<br>the American food with a kiwi twist
     </p>
   </div>
 
@@ -61,13 +61,13 @@
 
   <div class="section"> 
     <img src="images/banner2.jpg">
-    <p class="para para__menu">Menu</p>
+    <p class="para para__title">Menu</p>
   </div>
 
   <div class="section">
     <div>
       <img src="images/breakfastcrop.jpg">
-      <p class="para para__menu para__menu--banner">Breakfast</p>
+      <p class="para para__menu">Breakfast</p>
     </div>
     <div>
       <img src="images/lunchcrop.jpg">
@@ -85,7 +85,7 @@
 
   <div class="section">
     <img src="images/banner2.jpg">
-    <p class="para para__menu">Contact</p>
+    <p class="para para__title">Contact</p>
   </div>
 
   <div>
@@ -108,7 +108,7 @@
 <!--TEXT_ ADDRESS, PHONE, EMAIL-->
 
   <div>
-    <p class="para">
+    <p class="para para__contact">
       Opening hours:<br>
       Monday to Friday: 6.30 to 2pm<br>
       Saturday-Sunday: 8am to 2Pm<br>
